XNAT-2263 -- fixed layout issues in Sharing Manager modal; XNAT-2264 -- improved alignment of buttons in YUI modal panels
Former-commit-id: bc2569eb427a9f32e133e7657318e2973c3e3160

--- a/plugin-resources/webapp/xnat/style/xnat.css
+++ b/plugin-resources/webapp/xnat/style/xnat.css
@@ -253,6 +253,7 @@ select[multiple] { max-width: 200px ; }
 .yui-content { font-size: 12px ; }
 .yui-skin-sam .yui-dialog .ft span.default button,
 .yui-skin-sam .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn.yui-default button { background: #07428d url('images/btn1_30px.png') repeat-x center center ; color: #fff ; outline: none !important ; }
+.yui-skin-sam .yui-dialog .ft { height: auto !important ; padding: 14px ; }
 /*
 .yui-skin-sam .yui-dialog .ft span.default button { color: #FFFFFF ; border: none ; outline: none ; }
 .yui-skin-sam .yui-dialog .ft span.default button:active { border: none ; outline: none ; }
@@ -262,6 +263,7 @@ a, a:active, button, button:active, *:active { outline: none ; border: none ; }
 .yui-nav a { font-weight: bold ; }
 .yui-nav li.disabled { position: fixed ; left: -9999px ; }
 .yui-navset .select_add_tab { display: none ; }
+.yui-skin-sam .yui-button { margin: auto 4px ; }
 .yui-skin-sam .yui-button a,
 .yui-button button { font-weight: bold ; font-size: 12px ; }
 
